# cim-component

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  claude.sample.md  flake.nix  readme.md
doc/: architecture.md  performance.md  query-system.md  storage-backends.md
examples/: advanced_patterns.rs  architecture_usage.rs  basic_usage.rs
src/: lib.rs  tests.rs
tests/: component_tests.rs  mod.rs
tests/infrastructure/: mod.rs  test_event_stream.rs  test_nats_connection.rs
